despliegue/06-ingress-helm.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  
  - host: localhost
    http:
      paths:
      - path: /usuarios/obtener
        pathType: Prefix
        backend:
          service:
            name: hello-v1-svc
            port:
              number: 80
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-v2-svc
            port:
              number: 80
